--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -1,12 +1,12 @@
 ---
 layout: archive
-title: "Publications"
+title: "Latest Publications"
 permalink: /publications/
 author_profile: true
 ---
 
 {% if site.author.googlescholar %}
-  <div class="wordwrap">You can also find my publications on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
+  <div class="wordwrap">For more papers, you can find my list of publications on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
 {% endif %}
 
 {% include base_path %}
